--- a/src/app/layout/dashboard/dashboard.component.scss
+++ b/src/app/layout/dashboard/dashboard.component.scss
@@ -16,3 +16,16 @@ table {
 .mb-20 {
     margin-bottom: 20px;
 }
+table {
+    width: 100%;
+  }
+  .mat-header-row{
+      background-color:#3f51b5;
+  }
+  .mat-header-cell {
+       color:white;
+       font-size: 16px;
+  }
+  .material-icons{
+      color: red;
+  }
