--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -6,8 +6,8 @@
             <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/dashboard']">
                 <mat-icon class="sidenav-icon">dashboard</mat-icon> Dashbard
             </a>
-            <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/employees']">
-                <mat-icon class="sidenav-icon">build</mat-icon> employee
+            <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/screen1']">
+                <mat-icon class="sidenav-icon">build</mat-icon> Screen1
             </a>
             <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/screen2']">
                 <mat-icon class="sidenav-icon">people</mat-icon> Screen2
