--- a/src/app/layout/screen1/screen1.component.html
+++ b/src/app/layout/screen1/screen1.component.html
@@ -1,1 +1,46 @@
-<app-employees></app-employees>
+
+ <mat-form-field>
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+</mat-form-field>
+
+<div class="container text-center">
+ 
+  
+ 
+  <table mat-table [dataSource]="dataSource" #mytable class="my-table mat-elevation-z8">
+ 
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> ID. </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+ 
+    
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Sub Activity Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="doc">
+      <th mat-header-cell *matHeaderCellDef> Doccument Mandatory </th>
+      <td mat-cell *matCellDef="let element"> {{element.doc}} </td>
+    </ng-container>
+ 
+ 
+    
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <td mat-cell *matCellDef="let element" class="action-link"> 
+         
+        <i (click)="openDialog('Delete',element)" class="material-icons" color="red">
+          close
+          </i>
+      </td>
+    </ng-container>
+ 
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <br>
+  <button mat-raised-button (click)="openDialog('Add',{})" mat-flat-button color="primary">Add sub activity</button>
+ 
+</div>
