--- a/src/app/layout/components/topnav/topnav.component.html
+++ b/src/app/layout/components/topnav/topnav.component.html
@@ -6,16 +6,16 @@
         Admin Panel
     </div>
     <form class="hidden-sm" style="margin-left: 20px; margin-top: 5px">
-        <mat-form-field>
-            <input matInput [placeholder]="'Search' | translate">
-        </mat-form-field>
+        
     </form>
     <span class="nav-spacer"></span>
    
     
+    
     <button class="hidden-sm" mat-icon-button [matMenuTriggerFor]="profile">
         <mat-icon>account_circle</mat-icon>
     </button>
+    <mat-icon matBadge="15" matBadgeColor="warn">notifications</mat-icon>
     <mat-menu #profile="matMenu">
         <button mat-menu-item>
             <mat-icon>person</mat-icon>
