--- a/src/app/layout/screen1/screen1.component.html
+++ b/src/app/layout/screen1/screen1.component.html
@@ -16,13 +16,18 @@
  
     
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Sub Activity Name </th>
+      <th mat-header-cell *matHeaderCellDef> Event Name </th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="doc">
-      <th mat-header-cell *matHeaderCellDef> Doccument Mandatory </th>
-      <td mat-cell *matCellDef="let element"> {{element.doc}} </td>
+    <ng-container matColumnDef="start">
+      <th mat-header-cell *matHeaderCellDef> Start Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.start}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="end">
+      <th mat-header-cell *matHeaderCellDef> End Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.end}} </td>
     </ng-container>
  
  
@@ -41,6 +46,6 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   <br>
-  <button mat-raised-button (click)="openDialog('Add',{})" mat-flat-button color="primary">Add sub activity</button>
+  <button mat-raised-button (click)="openDialog('Add',{})" mat-flat-button color="primary">Create Event</button>
  
 </div>
