--- a/src/app/layout/dialog-box/dialog-box.component.html
+++ b/src/app/layout/dialog-box/dialog-box.component.html
@@ -5,15 +5,30 @@
     <input placeholder="{{action}} Event Name" matInput [(ngModel)]="local_data.name"> 
   </mat-form-field>
   <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
-    <input placeholder="{{action}} Start" matInput [(ngModel)]="local_data.start">
+    <input placeholder="{{action}} Description" matInput [(ngModel)]="local_data.desc">
   </mat-form-field>
-  <!-- <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
-    <input placeholder="{{action}} End Date" matInput [(ngModel)]="local_data.end">
-  </mat-form-field> -->
+  <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
+    <input matInput [matDatepicker]="start" placeholder="{{action}} Start Date" [(ngModel)]="local_data.start">
+    <mat-datepicker-toggle matSuffix [for]="start"></mat-datepicker-toggle>
+  <mat-datepicker #start></mat-datepicker>
+  </mat-form-field>
+  
   <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
     <input matInput [matDatepicker]="end" placeholder="{{action}} End Date" [(ngModel)]="local_data.end">
     <mat-datepicker-toggle matSuffix [for]="end"></mat-datepicker-toggle>
   <mat-datepicker #end></mat-datepicker>
+  </mat-form-field>
+  <mat-form-field  *ngIf="action != 'Delete'; else elseTemplate">
+    <mat-label>Time</mat-label>
+    <mat-select>
+      <mat-option value="red">10:00 AM</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
+    <input placeholder="{{action}} Venue (complete address for the event) " matInput [(ngModel)]="local_data.venue">
+  </mat-form-field>
+  <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
+    <input placeholder="{{action}} Ticket Rate ( in $ ) " matInput [(ngModel)]="local_data.rate">
   </mat-form-field>
   <ng-template #elseTemplate>
     Sure to delete <b>{{local_data.name}}</b>?
