--- a/src/app/layout/screen1/screen1.component.html
+++ b/src/app/layout/screen1/screen1.component.html
@@ -22,12 +22,12 @@
 
     <ng-container matColumnDef="start">
       <th mat-header-cell *matHeaderCellDef> Start Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.start}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.start | date}} </td>
     </ng-container>
 
     <ng-container matColumnDef="end">
       <th mat-header-cell *matHeaderCellDef> End Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.end}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.end | date}} </td>
     </ng-container>
  
  
@@ -46,6 +46,6 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   <br>
-  <button mat-raised-button (click)="openDialog('Add',{})" mat-flat-button color="primary">Create Event</button>
+  <button mat-raised-button (click)="openDialog('Create',{})" mat-flat-button color="primary">Create Event</button>
  
 </div>
