--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
             </ng-container>
             <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef> Date </th>
-                <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.date| date}} </td>
             </ng-container>
             <ng-container matColumnDef="tid">
                 <th mat-header-cell *matHeaderCellDef> Transaction ID </th>
