--- a/src/app/layout/dialog-box/dialog-box.component.html
+++ b/src/app/layout/dialog-box/dialog-box.component.html
@@ -6,37 +6,37 @@
     <input placeholder="{{action}} Event Name" matInput [(ngModel)]="local_data.name" required>   
   </mat-form-field>
   
-  <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
-    <input placeholder="{{action}} Description" matInput [(ngModel)]="local_data.desc" required>
+  <mat-form-field>
+    <input placeholder="Description" matInput [(ngModel)]="local_data.desc" required>
   </mat-form-field>
 </p>
 <table class="example-full-width" cellspacing="0"><tr>
-  <td><mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
-    <input matInput [matDatepicker]="start" placeholder="{{action}} Start Date" [(ngModel)]="local_data.start" required>
+  <td><mat-form-field>
+    <input matInput [matDatepicker]="start" placeholder="Start Date" [(ngModel)]="local_data.start" required>
     <mat-datepicker-toggle matSuffix [for]="start"></mat-datepicker-toggle>
   <mat-datepicker #start></mat-datepicker>
   </mat-form-field></td>
   
- <td> <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
-    <input matInput [matDatepicker]="end" placeholder="{{action}} End Date" [(ngModel)]="local_data.end" required>
+ <td> <mat-form-field>
+    <input matInput [matDatepicker]="end" placeholder="End Date" [(ngModel)]="local_data.end" required>
     <mat-datepicker-toggle matSuffix [for]="end"></mat-datepicker-toggle>
   <mat-datepicker #end></mat-datepicker>
   </mat-form-field></td>
-  <td><mat-form-field  *ngIf="action != 'Delete'; else elseTemplate">
+  <td><mat-form-field>
     <!-- <mat-label>Time</mat-label>
     <mat-select [(ngModel)]="local_data.time" required>
       <mat-option value="red">10:00 AM</mat-option>
     </mat-select> -->
-    <input type="time" atp-time-picker placeholder="{{action}} Time" value="{{selectedTime}}" matInput [(ngModel)]="local_data.time" required/>
+    <input type="time" atp-time-picker placeholder=" Select Time" matInput [(ngModel)]="local_data.time" required/>
   </mat-form-field></td>
 </tr></table>
   <p>
-  <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
-    <textarea placeholder="{{action}} Venue (complete address for the event) " matInput  rows="4" [(ngModel)]="local_data.venue" required></textarea>
+  <mat-form-field>
+    <textarea placeholder="Venue(complete address for the event) " matInput  rows="4" [(ngModel)]="local_data.venue" required></textarea>
   </mat-form-field>
  </p>
-  <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
-    <input placeholder="{{action}} Ticket Rate" matInput [(ngModel)]="local_data.rate" required>
+  <mat-form-field>
+    <input placeholder="Ticket Rate" matInput [(ngModel)]="local_data.rate" required>
     <span matPrefix>$&nbsp;</span>
     <span matSuffix>.00</span>
   </mat-form-field>
